==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/tiva/src/uart/implementation_1/hal_ll_uart.c <==
#include "hal_ll_rcc.h"
#include "hal_ll_uart.h"
#include "hal_ll_gpio.h"
#include "hal_ll_core.h"
#include "hal_ll_core_defines.h"
#include "hal_ll_uart_pin_map.h"
#define hal_ll_uart_get_module_state_address ((hal_ll_uart_handle_register_t *)*handle)
#define hal_ll_uart_get_handle (hal_ll_uart_handle_register_t *)hal_ll_uart_get_module_state_address->hal_ll_uart_handle
#define hal_ll_uart_get_base_struct(_handle) ((hal_ll_uart_base_handle_t *)_handle)
#define hal_ll_uart_get_base_from_hal_handle ((hal_ll_uart_hw_specifics_map_t *)((hal_ll_uart_handle_register_t *)\
                                             (((hal_ll_uart_handle_register_t *)(handle))->hal_ll_uart_handle))->hal_ll_uart_handle)->base
#define hal_ll_uart_wait_for_sync(_hal_sync_val) while( _hal_sync_val-- ) assembly(nop)
#define HAL_LL_UART_ACCEPTABLE_ERROR (float)1.0
#define hal_ll_uart_get_baud(_clock,_baud,_div) (((_clock/(float)_baud)/_div))
#define hal_ll_uart_get_real_baud(_clock,_baud,_div) (_clock/(_div*(_baud)))
#define hal_ll_uart_get_baud_error(_baud_real,_baud) (((float)(abs(_baud_real-_baud))/_baud)*100)
#define HAL_LL_UART0EN                                  (0)
#define HAL_LL_UART1EN                                  (1)
#define HAL_LL_UART2EN                                  (2)
#define HAL_LL_UART3EN                                  (3)
#define HAL_LL_UART4EN                                  (4)
#define HAL_LL_UART5EN                                  (5)

void hal_ll_uart_irq_enable( handle_t *handle, hal_ll_uart_irq_t irq ) {
    low_level_handle = hal_ll_uart_get_handle;
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_uart_get_module_state_address);

    hal_ll_uart_base_handle_t *hal_ll_hw_reg = ( hal_ll_uart_base_handle_t *)hal_ll_uart_hw_specifics_map_local->base;

    switch ( irq ) {
        case HAL_LL_UART_IRQ_RX:
            set_reg_bit( &hal_ll_hw_reg->im, HAL_LL_UART_IT_RXIM_BIT );
            break;
        case HAL_LL_UART_IRQ_TX:
            set_reg_bit( &hal_ll_hw_reg->im, HAL_LL_UART_IT_TXIM_BIT );
            break;

        default:
            break;
    }

    switch ( hal_ll_uart_hw_specifics_map_local->module_index ) {
        #if defined(UART_MODULE_0) && defined(UART0_NVIC)
        case hal_ll_uart_module_num( UART_MODULE_0 ):
            hal_ll_core_enable_irq( UART0_NVIC );
            break;
        #endif
        #if defined(UART_MODULE_1) && defined(UART1_NVIC)
        case hal_ll_uart_module_num( UART_MODULE_1 ):
            hal_ll_core_enable_irq( UART1_NVIC );
            break;
        #endif
        #if defined(UART_MODULE_2) && defined(UART2_NVIC)
        case hal_ll_uart_module_num( UART_MODULE_2 ):
            hal_ll_core_enable_irq( UART2_NVIC );
            break;
        #endif
        #if defined(UART_MODULE_3) && defined(UART3_NVIC)
        case hal_ll_uart_module_num( UART_MODULE_3 ):
            hal_ll_core_enable_irq( UART3_NVIC );
            break;
        #endif
        #if defined(UART_MODULE_4) && defined(UART4_NVIC)
        case hal_ll_uart_module_num( UART_MODULE_4 ):
            hal_ll_core_enable_irq( UART4_NVIC );
            break;
        #endif
        #if defined(UART_MODULE_5) && defined(UART5_NVIC)
        case hal_ll_uart_module_num( UART_MODULE_5 ):
            hal_ll_core_enable_irq( UART5_NVIC );
            break;
        #endif
        #if defined(UART_MODULE_6) && defined(UART6_NVIC)
        case hal_ll_uart_module_num( UART_MODULE_6 ):
            hal_ll_core_enable_irq( UART6_NVIC );
            break;
        #endif
        #if defined(UART_MODULE_7) && defined(UART7_NVIC)
        case hal_ll_uart_module_num( UART_MODULE_7 ):
            hal_ll_core_enable_irq( UART7_NVIC );
            break;
        #endif

        default:
            break;
    }
}

void hal_ll_uart_irq_disable( handle_t *handle, hal_ll_uart_irq_t irq ) {
    low_level_handle = hal_ll_uart_get_handle;
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_uart_get_module_state_address);

    hal_ll_uart_base_handle_t *hal_ll_hw_reg = ( hal_ll_uart_base_handle_t *)hal_ll_uart_hw_specifics_map_local->base;

    switch ( irq ) {
        case HAL_LL_UART_IRQ_RX:
            clear_reg_bit( &hal_ll_hw_reg->im, HAL_LL_UART_IT_RXIM_BIT );
            break;
        case HAL_LL_UART_IRQ_TX:
            clear_reg_bit( &hal_ll_hw_reg->im, HAL_LL_UART_IT_TXIM_BIT );
            break;

        default:
            break;
    }

    /* Check if module interrupt flags are set or not.
     * ATTENTION This is a very important part in the code.
     * Interrupts should be disabled ONLY in case we have
     * both TX and RX interrupts disabled.
     */
    if ( ( !check_reg_bit( &hal_ll_hw_reg->im, HAL_LL_UART_IT_RXIM_BIT ) ) &&
         ( !check_reg_bit( &hal_ll_hw_reg->im, HAL_LL_UART_IT_TXIM_BIT ) ) )
    {
        switch ( hal_ll_uart_hw_specifics_map_local->module_index ) {
            #if defined(UART_MODULE_0) && defined(UART0_NVIC)
            case hal_ll_uart_module_num( UART_MODULE_0 ):
                hal_ll_core_disable_irq( UART0_NVIC );
                break;
            #endif
            #if defined(UART_MODULE_1) && defined(UART1_NVIC)
            case hal_ll_uart_module_num( UART_MODULE_1 ):
                hal_ll_core_disable_irq( UART1_NVIC );
                break;
            #endif
            #if defined(UART_MODULE_2) && defined(UART2_NVIC)
            case hal_ll_uart_module_num( UART_MODULE_2 ):
                hal_ll_core_disable_irq( UART2_NVIC );
                break;
            #endif
            #if defined(UART_MODULE_3) && defined(UART3_NVIC)
            case hal_ll_uart_module_num( UART_MODULE_3 ):
                hal_ll_core_disable_irq( UART3_NVIC );
                break;
            #endif
            #if defined(UART_MODULE_4) && defined(UART4_NVIC)
            case hal_ll_uart_module_num( UART_MODULE_4 ):
                hal_ll_core_disable_irq( UART4_NVIC );
                break;
            #endif
            #if defined(UART_MODULE_5) && defined(UART5_NVIC)
            case hal_ll_uart_module_num( UART_MODULE_5 ):
                hal_ll_core_disable_irq( UART5_NVIC );
                break;
            #endif
            #if defined(UART_MODULE_6) && defined(UART6_NVIC)
            case hal_ll_uart_module_num( UART_MODULE_6 ):
                hal_ll_core_disable_irq( UART6_NVIC );
                break;
            #endif
            #if defined(UART_MODULE_7) && defined(UART7_NVIC)
            case hal_ll_uart_module_num( UART_MODULE_7 ):
                hal_ll_core_disable_irq( UART7_NVIC );
                break;
            #endif

            default:
                break;
        }
    }
}

uint8_t hal_ll_uart_read( handle_t *handle ) {
    volatile uint16_t frame = 0;
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_uart_get_module_state_address);
    hal_ll_uart_base_handle_t *hal_ll_hw_reg = ( hal_ll_uart_base_handle_t *)hal_ll_uart_hw_specifics_map_local->base;

    if ( check_reg_bit( &hal_ll_hw_reg->ris, HAL_LL_UART_IT_OER_BIT ) ) {
        set_reg_bit( &hal_ll_hw_reg->icr, HAL_LL_UART_IT_OER_BIT );
    }

    frame = hal_ll_hw_reg->dr;

    /**
     * TODO: Error flags are set by hardware in UARTDR[11:8].
     *       Error handling will be added in a future release.
     *
     * Code example:
     * // If error is present return 0, otherwise actual data.
     * return (frame & HAL_LL_UART_ERRORS) ? (0) : (frame);
     */
    return frame & HAL_LL_UART_DATA;
}

uint8_t hal_ll_uart_read_polling( handle_t *handle ) {
    volatile uint16_t frame = 0;
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_uart_get_module_state_address);
    hal_ll_uart_base_handle_t *hal_ll_hw_reg = ( hal_ll_uart_base_handle_t *)hal_ll_uart_hw_specifics_map_local->base;

    if ( check_reg_bit( &hal_ll_hw_reg->ris, HAL_LL_UART_IT_OER_BIT ) ) {
        set_reg_bit( &hal_ll_hw_reg->icr, HAL_LL_UART_IT_OER_BIT );
    }

    while ( hal_ll_hw_reg->fr & HAL_LL_UART_IT_FR_RXFE ) {
        // Wait for RXFE (Until the receiver is not empty)
    }

    frame = hal_ll_hw_reg->dr;

    /**
     * TODO: Error flags are set by hardware in UARTDR[11:8].
     *       Error handling will be added in a future release.
     *
     * Code example:
     * // If error is present return 0, otherwise actual data.
     * return (frame & HAL_LL_UART_ERRORS) ? (0) : (frame);
     */
    return frame & HAL_LL_UART_DATA;
}

static void hal_ll_uart_set_clock( hal_ll_uart_hw_specifics_map_t *map, bool hal_ll_state ) {
    switch ( map->module_index ) {
        #ifdef UART_MODULE_0
        case ( hal_ll_uart_module_num( UART_MODULE_0 )):
            ( hal_ll_state == true ) ? ( set_reg_bit( _SYSCTL_RCGCUART, HAL_LL_UART0EN ) ) : ( clear_reg_bit( _SYSCTL_RCGCUART, HAL_LL_UART0EN ) );
            break;
        #endif
        #ifdef UART_MODULE_1
        case ( hal_ll_uart_module_num( UART_MODULE_1 )):
            ( hal_ll_state == true ) ? ( set_reg_bit( _SYSCTL_RCGCUART, HAL_LL_UART1EN ) ) : ( clear_reg_bit( _SYSCTL_RCGCUART, HAL_LL_UART1EN ) );
            break;
        #endif
        #ifdef UART_MODULE_2
        case ( hal_ll_uart_module_num( UART_MODULE_2 )):
            ( hal_ll_state == true ) ? ( set_reg_bit( _SYSCTL_RCGCUART, HAL_LL_UART2EN ) ) : ( clear_reg_bit( _SYSCTL_RCGCUART, HAL_LL_UART2EN ) );
            break;
        #endif
        #ifdef UART_MODULE_3
        case ( hal_ll_uart_module_num( UART_MODULE_3 )):
            ( hal_ll_state == true ) ? ( set_reg_bit( _SYSCTL_RCGCUART, HAL_LL_UART3EN ) ) : ( clear_reg_bit( _SYSCTL_RCGCUART, HAL_LL_UART3EN ) );
            break;
        #endif
        #ifdef UART_MODULE_4
        case ( hal_ll_uart_module_num( UART_MODULE_4 )):
            ( hal_ll_state == true ) ? ( set_reg_bit( _SYSCTL_RCGCUART, HAL_LL_UART4EN ) ) : ( clear_reg_bit( _SYSCTL_RCGCUART, HAL_LL_UART4EN ) );
            break;
        #endif
        #ifdef UART_MODULE_5
        case ( hal_ll_uart_module_num( UART_MODULE_5 )):
            ( hal_ll_state == true ) ? ( set_reg_bit( _SYSCTL_RCGCUART, HAL_LL_UART5EN ) ) : ( clear_reg_bit( _SYSCTL_RCGCUART, HAL_LL_UART5EN ) );
            break;
        #endif
        #ifdef UART_MODULE_6
        case ( hal_ll_uart_module_num( UART_MODULE_6 )):
            ( hal_ll_state == true ) ? ( set_reg_bit( _SYSCTL_RCGCUART, HAL_LL_UART6EN ) ) : ( clear_reg_bit( _SYSCTL_RCGCUART, HAL_LL_UART6EN ) );
            break;
        #endif
        #ifdef UART_MODULE_7
        case ( hal_ll_uart_module_num( UART_MODULE_7 )):
            ( hal_ll_state == true ) ? ( set_reg_bit( _SYSCTL_RCGCUART, HAL_LL_UART7EN ) ) : ( clear_reg_bit( _SYSCTL_RCGCUART, HAL_LL_UART7EN ) );
            break;
        #endif

        default:
            break;
    }
}

static void hal_ll_uart_alternate_functions_set_state( hal_ll_uart_hw_specifics_map_t *map, bool hal_ll_state ) {
    module_struct module;
    uint32_t uart_config = 0;

    if ( (map->pins.rx_pin.pin_name != HAL_LL_PIN_NC) &&
         (map->pins.tx_pin.pin_name != HAL_LL_PIN_NC) )
    {
        if( hal_ll_state != false ) {
            uart_config |= GPIO_CFG_ALT_FUNCTION | GPIO_CFG_DIGITAL_ENABLE | GPIO_CFG_DRIVE_8mA;
        }

        module.pins[0] = VALUE( map->pins.tx_pin.pin_name, map->pins.tx_pin.pin_af );
        module.pins[1] = VALUE( map->pins.rx_pin.pin_name, map->pins.rx_pin.pin_af );
        module.pins[2] = GPIO_MODULE_STRUCT_END;

        module.configs[ 0 ] = uart_config;
        module.configs[ 1 ] = uart_config;
        module.configs[ 2 ] = GPIO_MODULE_STRUCT_END;

        hal_ll_gpio_module_struct_init( &module, hal_ll_state );
    }
}

static void hal_ll_uart_set_baud_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    uint32_t reg = 0;
    uint32_t integer_divider = 0;
    uint32_t fractional_divider = 0;
    uint8_t clk_div;
    hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct(map->base);

    if (hal_ll_hw_reg->ctl & HAL_LL_UART_CTL_HSE_BIT) {
        clk_div = 8;
    } else {
        clk_div = 16;
    }

    double hal_ll_baud_value = ( ( double )( hal_ll_uart_get_clock_speed( map->module_index ) ) /
                                 ( double )( clk_div * ( map->baud_rate.baud ) ) );
    uint32_t hal_ll_baud_value_int = ( uint32_t )hal_ll_baud_value;
    uint32_t hal_ll_baud_value_fract = ( uint32_t )( ( ( hal_ll_baud_value - ( double ) hal_ll_baud_value_int ) * ( double )64 ) + ( double )0.5 );
    uint32_t hal_ll_baud_real_value = ( uint32_t )( ( double )( hal_ll_uart_get_clock_speed( map->module_index ) ) /
                                      ( double )( clk_div * ( ( double )hal_ll_baud_value_int + ( hal_ll_baud_value_fract/
                                      ( double )64 ) ) ) + ( double )0.5);

    // If error greater than specified, cancel setting baud rate.
    if( (hal_ll_uart_get_baud_error(hal_ll_baud_real_value,map->baud_rate.baud)) > HAL_LL_UART_ACCEPTABLE_ERROR ) {
        map->baud_rate.real_baud = hal_ll_uart_get_baud_error(hal_ll_baud_real_value,map->baud_rate.baud);
    } else {
        map->baud_rate.real_baud = hal_ll_baud_real_value;
        hal_ll_hw_reg->ibrd = hal_ll_baud_value_int;
        hal_ll_hw_reg->fbrd = hal_ll_baud_value_fract;
    }
}

static void hal_ll_uart_set_data_bits_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct(map->base);

    switch ( map->data_bit ) {
        case HAL_LL_UART_DATA_BITS_5:
            hal_ll_hw_reg->lcrh &= ~DATA_BITS_MASK;
            break;
        case HAL_LL_UART_DATA_BITS_6:
            hal_ll_hw_reg->lcrh &= ~DATA_BITS_MASK;
            hal_ll_hw_reg->lcrh |= DATA_BIT_6;
            break;
        case HAL_LL_UART_DATA_BITS_7:
            hal_ll_hw_reg->lcrh &= ~DATA_BITS_MASK;
            hal_ll_hw_reg->lcrh |= DATA_BIT_7;
            break;
        case HAL_LL_UART_DATA_BITS_8:
            hal_ll_hw_reg->lcrh |= DATA_BIT_8;
            break;

        default:
            break;
    }
}

static void hal_ll_uart_set_parity_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct(map->base);

    switch ( map->parity ) {
        case HAL_LL_UART_PARITY_NONE:
            hal_ll_hw_reg->lcrh &= ~(PARITY_MASK | PARITY_STICK);
            break;
        case HAL_LL_UART_PARITY_EVEN:
            hal_ll_hw_reg->lcrh |= (PARITY_EVEN | PARITY_STICK);
            break;
        case HAL_LL_UART_PARITY_ODD:
            hal_ll_hw_reg->lcrh &= ~PARITY_MASK;
            hal_ll_hw_reg->lcrh |= (PARITY_ODD | PARITY_STICK);
            break;

        default:
            break;
    }
}

static void hal_ll_uart_init( hal_ll_uart_hw_specifics_map_t *map ) {
    /*!< @brief Static, because clock doesn't change during runtime */
    uint32_t hal_ll_clock_value = Get_Fosc_kHz() * 2;

    hal_ll_uart_alternate_functions_set_state( map, true );

    hal_ll_uart_set_clock( map, true );

    /* There must be a delay of 3 system clocks after the UART module
     * clock is enabled before any UART module registers are accessed.
     * See datasheet page 1327 for more information.
     * <https://www.ti.com/lit/gpn/tm4c129xnczad>
     */
    assembly( nop );
    assembly( nop );
    assembly( nop );

    hal_ll_uart_hw_init( map );

    hal_ll_uart_wait_for_sync(hal_ll_clock_value);
}
