==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/renesas/src/uart/implementation_3/hal_ll_uart.c <==
#include "mcu.h"
#include "hal_ll_sau.h"
#include "hal_ll_uart.h"
#include "hal_ll_gpio.h"
#include "hal_ll_core.h"
#include "hal_ll_mstpcr.h"
#include "hal_ll_core_defines.h"
#include "hal_ll_uart_pin_map.h"
#define hal_ll_uart_get_module_state_address ((hal_ll_uart_handle_register_t *)*handle)
#define hal_ll_uart_get_handle (hal_ll_uart_handle_register_t *)hal_ll_uart_get_module_state_address->hal_ll_uart_handle
#define hal_ll_uart_get_base_struct(_handle) ((hal_ll_uart_base_handle_t *)_handle)
#define hal_ll_uart_get_base_from_hal_handle ((hal_ll_uart_hw_specifics_map_t *)((hal_ll_uart_handle_register_t *)\
                                             (((hal_ll_uart_handle_register_t *)(handle))->hal_ll_uart_handle))->hal_ll_uart_handle)->base
#define hal_ll_sci_get_baud_rate(futa, brr) (futa / (brr * 2))
#define HAL_LL_UARTA_ASCTA_OVECTA   0
#define HAL_LL_UARTA_ASCTA_FECTA    1
#define HAL_LL_UARTA_ASCTA_PECTA    2
#define HAL_LL_UARTA_ASISA_OVEA     0
#define HAL_LL_UARTA_ASISA_FEA      1
#define HAL_LL_UARTA_ASISA_PEA      2
#define HAL_LL_UARTA_ASISA_TXSFA    4
#define HAL_LL_UARTA_ASISA_TXBFA    5
#define HAL_LL_UARTA_ASIMA0_ISRMA   0
#define HAL_LL_UARTA_ASIMA0_ISSMA   1
#define HAL_LL_UARTA_ASIMA0_RXEA    5
#define HAL_LL_UARTA_ASIMA0_TXEA    6
#define HAL_LL_UARTA_ASIMA0_EN      7
#define HAL_LL_UARTA_ASIMA1_DIR     1
#define HAL_LL_UARTA_ASIMA1_SL      2
#define HAL_LL_UARTA_ASIMA1_CL_MASK         0x18
#define HAL_LL_UARTA_ASIMA1_CL_MASK_7BITS   0x10

void hal_ll_uart_irq_enable( handle_t *handle, hal_ll_uart_irq_t irq ) {
    low_level_handle = hal_ll_uart_get_handle;
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_uart_get_module_state_address );

    if ( hal_ll_uart_hw_specifics_map_local->is_sau_module ) {
        hal_ll_sau_uart_irq_enable( hal_ll_uart_hw_specifics_map_local, irq );
    } else {
        hal_ll_uart_base_handle_t *hal_ll_hw_reg = ( hal_ll_uart_base_handle_t *)hal_ll_uart_hw_specifics_map_local->base;

        switch ( irq ) {
            case HAL_LL_UART_IRQ_RX:
                set_reg_bit( &hal_ll_hw_reg->asima0, HAL_LL_UARTA_ASIMA0_RXEA );
                break;
            case HAL_LL_UART_IRQ_TX:
                set_reg_bit( &hal_ll_hw_reg->asima0, HAL_LL_UARTA_ASIMA0_TXEA );
                break;

            default:
                break;
        }
    }

    // To trigger the TX interrupt RA0 MCUs require data to be written into transmit buffer both for SAU and UARTA.
    if ( HAL_LL_UART_IRQ_TX == irq )
        irq_handler( objects[ hal_ll_uart_hw_specifics_map_local->module_index ], HAL_LL_UART_IRQ_TX );
}

void hal_ll_uart_irq_disable( handle_t *handle, hal_ll_uart_irq_t irq ) {
    low_level_handle = hal_ll_uart_get_handle;
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_uart_get_module_state_address );

    if ( hal_ll_uart_hw_specifics_map_local->is_sau_module ) {
        hal_ll_sau_uart_irq_disable( hal_ll_uart_hw_specifics_map_local, irq );
    } else {
        hal_ll_uart_base_handle_t *hal_ll_hw_reg = ( hal_ll_uart_base_handle_t *)hal_ll_uart_hw_specifics_map_local->base;

        switch ( irq ) {
            case HAL_LL_UART_IRQ_RX:
                clear_reg_bit( &hal_ll_hw_reg->asima0, HAL_LL_UARTA_ASIMA0_RXEA );
                break;
            case HAL_LL_UART_IRQ_TX:
                // Wait for the last transmission to finish.
                while( check_reg_bit(  &hal_ll_hw_reg->asisa, HAL_LL_UARTA_ASISA_TXSFA ));
                clear_reg_bit( &hal_ll_hw_reg->asima0, HAL_LL_UARTA_ASIMA0_TXEA );
                break;

            default:
                break;
        }
    }
}

uint8_t hal_ll_uart_read( handle_t *handle ) {
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_uart_get_module_state_address );
    uint8_t rd_data;

    if ( hal_ll_uart_hw_specifics_map_local->is_sau_module ) {
        rd_data = hal_ll_sau_uart_read( hal_ll_uart_hw_specifics_map_local );
    } else {
        hal_ll_uart_base_handle_t *hal_ll_hw_reg = ( hal_ll_uart_base_handle_t * )hal_ll_uart_hw_specifics_map_local->base;

        rd_data = hal_ll_hw_reg->rxba;
    }

    return rd_data;
}

uint8_t hal_ll_uart_read_polling( handle_t *handle ) {
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_uart_get_module_state_address );
    uint8_t read_data = 0xFF;

    if ( hal_ll_uart_hw_specifics_map_local->is_sau_module ) {
        read_data = hal_ll_sau_uart_read_polling( hal_ll_uart_hw_specifics_map_local );
    } else {
        hal_ll_uart_base_handle_t *hal_ll_hw_reg = ( hal_ll_uart_base_handle_t *)hal_ll_uart_hw_specifics_map_local->base;

        /* In polling mode, UARTA has no flag to confirm that the received byte was read.
        * Therefore, wait until the receive data register changes from the buffer reset
        * value before reading the next byte.
        *
        * At higher baud rates, data may be lost because the missing RDRF flag makes it
        * harder to detect new data before an overrun occurs. Once an overrun error
        * happens, subsequent received data may also be lost.
        *
        * For polling mode, the recommended baud rate is 9600.
        */
        while ( 0xFF == read_data )
            read_data = hal_ll_hw_reg->rxba;

        /* In polling mode, UARTA does not refresh the receive buffer automatically.
        * After reading each received byte, reset the buffer by briefly disabling and
        * re-enabling the UARTA module.
        */
        clear_reg_bit( &hal_ll_hw_reg->asima0, HAL_LL_UARTA_ASIMA0_EN );
        set_reg_bit( &hal_ll_hw_reg->asima0, HAL_LL_UARTA_ASIMA0_EN );
    }

    return read_data;
}

static void hal_ll_uart_set_clock( hal_ll_uart_hw_specifics_map_t *map, bool hal_ll_state ) {
    if ( map->is_sau_module )
        hal_ll_sau_set_clock( map->module_index, hal_ll_state );
    else
        ( hal_ll_state == false ) ? ( set_reg_bit( _MSTPCRB, MSTPCRB_MSTPB15_POS )) : ( clear_reg_bit( _MSTPCRB, MSTPCRB_MSTPB15_POS ));
}

static void hal_ll_uart_alternate_functions_set_state( hal_ll_uart_hw_specifics_map_t *map, bool hal_ll_state ) {
    module_struct module;
    uint32_t uart_config = 0;

    if (( map->pins.rx_pin.pin_name != HAL_LL_PIN_NC ) &&
        ( map->pins.tx_pin.pin_name != HAL_LL_PIN_NC ))
    {
        module.pins[0] = VALUE( map->pins.tx_pin.pin_name, map->pins.tx_pin.pin_af );
        module.pins[1] = VALUE( map->pins.rx_pin.pin_name, map->pins.rx_pin.pin_af );
        module.pins[2] = GPIO_MODULE_STRUCT_END;

        module.configs[ 0 ] = GPIO_CFG_DIGITAL_OUTPUT;
        module.configs[ 1 ] = GPIO_CFG_DIGITAL_INPUT;
        module.configs[ 2 ] = GPIO_MODULE_STRUCT_END;

        hal_ll_gpio_module_struct_init( &module, hal_ll_state );
    }
}

static void hal_ll_uart_set_baud_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct( map->base );
    uint32_t source_clock = hal_ll_uart_get_clock_speed( map );
    uint8_t brgca_value;

    /* Find the best BRGCA value.
     *  BRGCA = (Futa / (2 * baud)) and [ 2 <= BRGCA <= 255 ]
     */
    brgca_value = source_clock / ( 2 * map->baud_rate.baud );
    map->baud_rate.real_baud = hal_ll_sci_get_baud_rate( source_clock, brgca_value );
    write_reg(  &hal_ll_hw_reg->brgca, brgca_value );
}

static void hal_ll_uart_set_data_bits_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct( map->base );

    switch ( map->data_bit )
    {
        case HAL_LL_UART_DATA_BITS_5:
            clear_reg_bits( &hal_ll_hw_reg->asima1, HAL_LL_UARTA_ASIMA1_CL_MASK );
            break;
        case HAL_LL_UART_DATA_BITS_7:
            set_reg_bits( &hal_ll_hw_reg->asima1, HAL_LL_UARTA_ASIMA1_CL_MASK_7BITS );
            break;
        case HAL_LL_UART_DATA_BITS_8:
            set_reg_bits( &hal_ll_hw_reg->asima1, HAL_LL_UARTA_ASIMA1_CL_MASK_8BITS );
            break;

        default:
            break;
    }
}

static void hal_ll_uart_set_parity_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct( map->base );

    switch ( map->parity )
    {
        case HAL_LL_UART_PARITY_NONE:
            clear_reg_bits( &hal_ll_hw_reg->asima1, HAL_LL_UARTA_ASIMA1_PS_MASK );
            break;
        case HAL_LL_UART_PARITY_EVEN:
            set_reg_bits( &hal_ll_hw_reg->asima1, HAL_LL_UARTA_ASIMA1_PS_MASK_EVEN );
            break;
        case HAL_LL_UART_PARITY_ODD:
            set_reg_bits( &hal_ll_hw_reg->asima1, HAL_LL_UARTA_ASIMA1_PS_MASK_ODD );
            break;

        default:
            break;
    }
}

static void hal_ll_uart_init( hal_ll_uart_hw_specifics_map_t *map ) {
    hal_ll_uart_set_clock( map, true );

    hal_ll_uart_alternate_functions_set_state( map, true );

    if ( map->is_sau_module )
        hal_ll_sau_uart_hw_init( map );
    else
        hal_ll_uart_hw_init( map );
}
